Fixed: Card Buttons Alignment

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -10,6 +10,10 @@
     width: 95%;
 }
 
+.ui.card:last-child {
+    margin-bottom: 10px;
+}
+
 .dates {
     display: flex;
     margin-left: 15px;
@@ -60,13 +64,15 @@
 
 .content {
     display: flex;
-    flex: 1;    
+    flex: 1;
+    position: relative;    
 }
 
-.right {
-    margin-left: 700px;
+.right-card {
+    left: 85%;
     display: flex;
     flex-direction: row;
+    position: absolute;
 }
 
 .edit-button {
